--- a/index.html
+++ b/index.html
@@ -1,54 +1,72 @@
-<div class="nav1">
-<img class="bod" src="https://graph.facebook.com/1618956224/picture?type=square">
-<ul id="nav2">
-  <li><a href="#home">Home</a></li>
-  <li><a href="#about">About Me</a></li>
-  <li><a href="#contact">Contact</a></li>
-</ul>
-</div>
-<div class="sec">
-<section id="home">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2>Jason's Home page</h2>
-            <p class="lead">Welcome to my home page! Here you can find the personal information about me. <i class="fa fa-smile-o"></i> </p>
-          </div>
-        </div>
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>Jason Lam's page</title>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css" rel="stylesheet" />
+      <link href="style.css" rel="stylesheet" />
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet" />
+      <link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet" />
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="script.js"></script>
+   </head>
+   <body>
+      <div class="nav1">
+         <img class="bod" src="https://graph.facebook.com/1618956224/picture?type=square">
+         <ul id="nav2">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#contact">Contact</a></li>
+         </ul>
       </div>
-    </section>
-
-    <section id="about">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2>About Me</h2>
-            <p class="lead">My name is Jason.</p>
-          </div>
-        </div>
+      <div class="sec">
+         <section id="home">
+            <div class="container">
+               <div class="row">
+                  <div class="col-lg-8 mx-auto">
+                     <h2>Jason's Home page</h2>
+                     <p class="lead">Welcome to my home page! Here you can find the personal information about me. <i class="fa fa-smile-o"></i> </p>
+                  </div>
+               </div>
+            </div>
+         </section>
+         <section id="about">
+            <div class="container">
+               <div class="row">
+                  <div class="col-lg-8 mx-auto">
+                     <h2>About Me</h2>
+                     <p class="lead">My name is Jason.</p>
+                  </div>
+               </div>
+            </div>
+         </section>
+         <section id="contact">
+            <div class="container">
+               <div class="row">
+                  <div class="col-lg-8 mx-auto">
+                     <h2>
+                     Contact
+                     <h2>
+                     <p class="lead">
+                     <div class="row">
+                        <div class="col-sm-2"><i class="fa fa-envelope"></i></div>
+                        <div class="col-sm-10"><a href="mailto:jasonlam514@hotmail.com" style="font-size:18px">jasonlam514@hotmail.com</a></div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
       </div>
-    </section>
-
-    <section id="contact">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2>Contact<h2>
-              <p class="lead">
-              <div class="row"><div class="col-sm-2"><i class="fa fa-envelope"></i></div><div class="col-sm-10"><a href="mailto:jasonlam514@hotmail.com" style="font-size:18px">jasonlam514@hotmail.com</a></div>
-              </div>
-          </div>
-        </div>
-      </div>
-    </section>
-</div>
-<footer>
-<ul>  
-<li><a href="https://www.facebook.com/jason.lam.184" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li><a href="https://www.linkedin.com/in/jasonlam514/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-<li><a href="https://github.com/jasonlam514" target="_blank"><i class="fa fa-github"></i></a></li>
-<li><a href="https://t.me/lamenk" target="_blank"><i class="fa fa-telegram"></i></a></li>
-<li><a href="#nav"><i class="fa fa-angle-up"></i></a></li>
-</ul>
-&copy; 2018 - Jason Lam
-</footer>
+   </body>
+   <footer>
+      <ul>
+         <li><a href="https://www.facebook.com/jason.lam.184" target="_blank"><i class="fa fa-facebook"></i></a></li>
+         <li><a href="https://www.linkedin.com/in/jasonlam514/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+         <li><a href="https://github.com/jasonlam514" target="_blank"><i class="fa fa-github"></i></a></li>
+         <li><a href="https://t.me/lamenk" target="_blank"><i class="fa fa-telegram"></i></a></li>
+         <li><a href="#home"><i class="fa fa-angle-up"></i></a></li>
+      </ul>
+      &copy; 2018 - Jason Lam
+   </footer>
+</html>
