--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet" />
       <link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet" />
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	  <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet" />
       <script src="script.js"></script>
+	  <script>
+		$(document).ready(function() {
+			$(".bod").click(function(){
+				$(".bod").fadeOut();
+				$(".bod").fadeIn();
+			});
+		});
+	  </script>
    </head>
    <body>
       <div class="nav1">
-         <img class="bod" src="https://graph.facebook.com/1618956224/picture?type=square">
+         <a><img class="bod" src="https://graph.facebook.com/1618956224/picture?type=square"></a>
          <ul id="nav2">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About Me</a></li>
@@ -49,10 +58,11 @@
                      Contact
                      <h2>
                      <p class="lead">
-                     <div class="row">
-                        <div class="col-sm-2"><i class="fa fa-envelope"></i></div>
-                        <div class="col-sm-10"><a href="mailto:jasonlam514@hotmail.com" style="font-size:18px">jasonlam514@hotmail.com</a></div>
-                     </div>
+                       <div class="row">
+                          <div class="col-sm-2"><i class="fa fa-envelope"></i></div>
+                          <div class="col-sm-10"><a href="mailto:jasonlam514@hotmail.com" style="font-size:18px">jasonlam514@hotmail.com</a></div>
+                       </div>
+					 </p>
                   </div>
                </div>
             </div>
