--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <div class="sec">
          <section id="home">
             <div class="container">
+			<div class="diamond"></div>
                <div class="row">
                   <div class="col-lg-8 mx-auto">
                      <h2>Jason's Home page</h2>
@@ -49,13 +50,29 @@
                <div class="row">
                   <div class="col-lg-8 mx-auto">
                      <h2>About Me</h2>
-                     <p class="lead">My name is Jason. I am <span id="results"></span> years old.</p>
+                     <p class="lead">My name is Jason. I am <span id="results"></span> years old. Some of my previous projects are listed below:</p> 
                   </div>
                </div>
 			   <div class="grid-container">
-				  <div class="grid-item"><img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png"></img></div>
-				  <div class="grid-item"><img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/004.png"</img></div>
-				  <div class="grid-item"><img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/007.png"</img></div>
+				  <div class="grid-item caption"><img class="caption__media" src="checker.png"></img>
+					<div class="caption__overlay">
+						<h3 class="caption__overlay__title">Bets checker</h3>
+						<p class="caption__overlay__content">Gather odds data from different bookies which guarantees you a profit. <a href="https://drive.google.com/open?id=1dwU-Um6cbANiWlm2IUbm_410xhu041DR">Link</a></p>
+					</div>
+				  </div>
+				  <div class="grid-item caption"><img class="caption__media" src="othello.png"></img>
+					<div class="caption__overlay">
+						<h3 class="caption__overlay__title">Boardgame</h3>
+						<p class="caption__overlay__content">3-in-1 board game (Othello, Connect4, TicTacToe2). <a href="https://drive.google.com/file/d/0B93u1Q8ZWEwdV2VhTGRhRFQ2U3M/view">Link</a></p>
+					</div>
+				  </div>
+				  <div class="grid-item caption"><img class="caption__media" src="othello.png"></img>
+				    <div class="caption__overlay">
+						<h3 class="caption__overlay__title">Memo App for android</h3>
+						<p class="caption__overlay__content">It allows users to add memos and schedule notifications. <a href="				  https://drive.google.com/file/d/0B93u1Q8ZWEwdaS1kUFNUWVJ2OFU/view
+">Link</a></p>
+					</div>
+				  </div>
 				  <div class="grid-item"><img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/104.png"</img></div>
 				  <div class="grid-item"><img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/105.png"</img></div>
 				  <div class="grid-item"><img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/106.png"</img></div>
