--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<p class="caption__overlay__content">3-in-1 board game (Othello, Connect4, TicTacToe2). <a href="https://drive.google.com/file/d/0B93u1Q8ZWEwdV2VhTGRhRFQ2U3M/view">Link</a></p>
 					</div>
 				  </div>
-				  <div class="grid-item caption"><img class="caption__media" src="othello.png"></img>
+				  <div class="grid-item caption"><img class="caption__media" src="memo.jpeg"></img>
 				    <div class="caption__overlay">
 						<h3 class="caption__overlay__title">Memo App for android</h3>
 						<p class="caption__overlay__content">It allows users to add memos and schedule notifications. <a href="				  https://drive.google.com/file/d/0B93u1Q8ZWEwdaS1kUFNUWVJ2OFU/view
