--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <title>Jason Lam's page</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
+	  <link rel="shortcut icon" type="image/png" href="os.png" />
       <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css" rel="stylesheet" />
       <link href="style.css" rel="stylesheet" />
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet" />
@@ -39,8 +40,8 @@
 			<div class="diamond"></div>
                <div class="row">
                   <div class="col-lg-8 mx-auto">
-                     <h2>Jason's Home page</h2>
-                     <p class="lead">Welcome to my home page! Here you can find the personal information about me. <i class="fa fa-smile-o"></i> </p>
+                     <h2>Jason's Homepage</h2>
+                     <p class="lead">Welcome to my homepage! Here you can find the personal information about me. <i class="fa fa-smile-o"></i> </p>
                   </div>
                </div>
             </div>
@@ -50,7 +51,7 @@
                <div class="row">
                   <div class="col-lg-8 mx-auto">
                      <h2>About Me</h2>
-                     <p class="lead">My name is Jason. I am <span id="results"></span> years old. Some of my previous projects are listed below:</p> 
+                     <p class="lead">I am Jason, a computer science student from Hong Kong. Some of my previous projects are listed below:</p> 
                   </div>
                </div>
 			   <div class="grid-container">
@@ -73,9 +74,9 @@
 ">Link</a></p>
 					</div>
 				  </div>
-				  <div class="grid-item"><img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/104.png"</img></div>
+				  <!--<div class="grid-item"><img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/104.png"</img></div>
 				  <div class="grid-item"><img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/105.png"</img></div>
-				  <div class="grid-item"><img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/106.png"</img></div>
+				  <div class="grid-item"><img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/106.png"</img></div>-->
 			   </div>
             </div>
          </section>
@@ -100,7 +101,7 @@
    </body>
    <footer>
       <ul>
-         <li><a href="https://www.facebook.com/jason.lam.184" target="_blank"><i class="fa fa-facebook"></i></a></li>
+         <!--<li><a href="https://www.facebook.com/jason.lam.184" target="_blank"><i class="fa fa-facebook"></i></a></li>-->
          <li><a href="https://www.linkedin.com/in/jasonlam514/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
          <li><a href="https://github.com/jasonlam514" target="_blank"><i class="fa fa-github"></i></a></li>
          <li><a href="https://t.me/lamenk" target="_blank"><i class="fa fa-telegram"></i></a></li>
