--- a/index.html
+++ b/index.html
@@ -39,13 +39,18 @@
 	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
    </head>
    <body data-spy="scroll" data-target=".navbar-right">
-      <div class="navbar-right navbar-expand-sm navbar-dark bg-dark fixed-top nav1">
+      <div class="navbar-right navbar-dark navbar-expand-lg bg-dark fixed-top nav1">
          <a><img class="bod" src="https://graph.facebook.com/1618956224/picture?type=square"></a>
-         <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="#about">About Me</a></li>
-            <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-         </ul>
+		 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar1">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbar1">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+				<li class="nav-item"><a class="nav-link" href="#about">About Me</a></li>
+				<li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+			</ul>
+		</div>
       </div>
       <div class="sec">
          <section id="home">
