--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 				$(".bod").fadeOut();
 				$(".bod").fadeIn();
 			});
+			$("section").click(function(){
+				$('.navbar-nav li').removeClass('active');
+			});
 			var bg = 1;
 			$("section:nth-child(even)").click(function(){
 				if(bg==1){
