container remove active

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				$(".bod").fadeOut();
 				$(".bod").fadeIn();
 			});
-			$("section").click(function(){
+			$(".container").click(function(){
 				$('.navbar-nav li').removeClass('active');
 			});
 			var bg = 1;
