Revert "container remove active"
This reverts commit efc9ef40014365270e3ec77991334165feb80b14.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				$(".bod").fadeOut();
 				$(".bod").fadeIn();
 			});
-			$(".container").click(function(){
+			$("section").click(function(){
 				$('.navbar-nav li').removeClass('active');
 			});
 			var bg = 1;
