--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <title>Jason Lam's page</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <link rel="shortcut icon" type="image/png" href="os.png" />
+	  <link rel="shortcut icon" type="image/png" href="icon.png" />
       <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css" rel="stylesheet" />
       <link href="style.css" rel="stylesheet" />
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet" />
@@ -76,7 +76,7 @@
 				  <div class="grid-item caption"><img class="caption__media" src="checker.png"></img>
 					<div class="caption__overlay">
 						<h3 class="caption__overlay__title">Bets checker</h3>
-						<p class="caption__overlay__content">Gather odds data from different bookies which guarantees you a profit. <a target="_blank" href="https://drive.google.com/open?id=1dwU-Um6cbANiWlm2IUbm_410xhu041DR">Link</a></p>
+						<p class="caption__overlay__content">Gathering odds data from different bookies which guarantees you a profit. <a target="_blank" href="https://drive.google.com/open?id=1dwU-Um6cbANiWlm2IUbm_410xhu041DR">Link</a></p>
 					</div>
 				  </div>
 				  <div class="grid-item caption"><img class="caption__media" src="othello.png"></img>
