--- a/index.html
+++ b/index.html
@@ -13,6 +13,28 @@
 	  <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet" />
       <script src="script.js"></script>
 	  <script>
+	  function hide() {
+	  	//$('#video-view').removeAttr('height');
+		//$("#video-view").css({'height':'-=20px'});
+		/*$('#video-view h2').remove(); 
+		$('#video-view div').remove(); 
+		$('#video-view button').remove(); 
+		$('#video-view').css({'background-color':''});*/
+		document.getElementById("about").style.height = $(window).height() + 'px';
+		if ($("#video-view").is(':visible')) {
+			$("html, body").animate({scrollTop: $("#video-view").offset().top});
+			var el = document.getElementById("about");
+			var height = el.offsetHeight;
+			//$('#video-view').height("+=20");
+			//$("#video-view").css({'height':'+=20px'});
+			var newHeight = $(window).height() + $('#video-view').height();
+			el.style.height = newHeight + 'px';
+		}else{
+			$("html, body").animate({scrollTop: $("#about").offset().top});
+		}
+	  }
+	  </script>
+	  <script>
 		$(document).ready(function() {
 		  $("body").attr('data-offset',$("section").height()/1.2);
 		  var today = new Date();
@@ -32,6 +54,17 @@
 					$(this).css("background-image", "url(giraffe.svg)");
 					bg = 1;
 				}
+			});
+			$(".popup").click(function () {
+				//document.getElementById('about').style.height = $('#video-view').offset()+300+$(window).height();
+				var $this = $(this);
+				var $iframe = $("<iframe>").attr("src", $this.data("link")).css({"width": 400, "height": 300});
+				var $title = $("<h2>").text($this.data("title")).attr("class","pad");
+				//var $button = $("<button>").text("hide").attr("onclick","hide()");
+				$("#video-view").html($title).append($iframe);
+				$iframe.wrap("<div class='class-video'>");
+				$("#video-view").css({'background-color':'#FF69B4'});
+				$("#video-view").slideToggle('slow',hide);
 			});
 		});
 	  </script>
@@ -82,7 +115,9 @@
 				  <div class="grid-item caption"><img class="caption__media" src="othello.png"></img>
 					<div class="caption__overlay">
 						<h3 class="caption__overlay__title">Boardgame</h3>
-						<p class="caption__overlay__content">3-in-1 board game (Othello, Connect4, TicTacToe2). <a target="_blank" href="https://drive.google.com/file/d/0B93u1Q8ZWEwdV2VhTGRhRFQ2U3M/view">Link</a></p>
+						<p class="caption__overlay__content"><a target="_blank" href="https://drive.google.com/file/d/0B93u1Q8ZWEwdV2VhTGRhRFQ2U3M/view">Link</a>
+						<a class="popup" data-link="LamAllFeatures.mp4" data-title="3-in-1 board game (Othello, Connect4, TicTacToe2)" href="#" onClick="return false;">Demo</a>
+						</p>
 					</div>
 				  </div>
 				  <div class="grid-item caption"><img class="caption__media" src="memo.jpeg"></img>
@@ -94,9 +129,14 @@
 				  </div>
 				  <!--<div class="grid-item"><img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/104.png"</img></div>
 				  <div class="grid-item"><img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/105.png"</img></div>
-				  <div class="grid-item"><img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/106.png"</img></div>-->
+				  <div class="grid-item"><img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/106.png"</img></div>
+				  </div>
+			<div data-role="popup" id="popupVideo" data-overlay-theme="b" data-theme="a" data-tolerance="15,15" class="ui-content">
+			<iframe src="LamAllFeatures.mp4" width="497" height="298" seamless=""></iframe>
+			</div>-->
 			   </div>
             </div>
+			<div id="video-view"></div>
          </section>
          <section id="contact">
             <div class="container">
