--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
 	  <script>
 		$(document).ready(function() {
 		  $("#video-view").css('padding-top',$(".navbar-right").height()+10);
-		  if(!(/Android|webOS|BlackBerry|iPhone|iPad|iPod|Opera Mini|IEMobile/i.test(navigator.userAgent) )) {
-			$('section:nth-child(even)').css('background-attachment','');
+		  if((/Android|webOS|BlackBerry|iPhone|iPad|iPod|Opera Mini|IEMobile/i.test(navigator.userAgent) )) {
+			//alert('computer');
+			$('section:nth-child(even)').css('background-attachment','scroll');
 		  };
 		  //$("body").attr('data-offset',$("section").height()/0.7);
 		  //$("section").attr('data-offset',$("section").height()/0.7);
