--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
 				var newHeight = $(window).height() + $('#video-view').outerHeight();
 				//el.style.height = newHeight + 'px';
 				$('#about').css('height',newHeight + 'px');
-				$.scrollify.disable();
-				$.scrollify.enable();
+				//$.scrollify.disable();
+				//$.scrollify.enable();
 				$.scrollify.update();
-				$("html, body").animate({scrollTop: $("#video-view").offset().top},800);
+				//$("html, body").animate({scrollTop: $("#video-view").offset().top},800);
+				$("html, body").animate({ scrollTop: $("#video-view").offset().top-$("iframe").height()}, 800);
 			}else{
 				$("html, body").animate({scrollTop: $("#about").offset().top},800);
 				$('#video-view').css('display','none');
@@ -105,13 +106,15 @@
 			});
 			$(".popup").click(function () {
 				//document.getElementById('about').style.height = $('#video-view').offset()+300+$(window).height();
+				$("#video-view").css({"width":"600","max-width":"70vw","max-height":"70vh","margin":"0 auto"});
 				var $this = $(this);
-				var $iframe = $("<iframe>").attr("src", $this.data("link")).css({"width": 400, "height": 300});
+				var $iframe = $("<iframe>").attr("src", $this.data("link")).css({"width":"100%","height": "40vh"});
 				var $title = $("<h2>").text($this.data("title")).attr("class","pad");
 				//var $button = $("<button>").text("hide").attr("onclick","hide()");
 				$("#video-view").html($title).append($iframe);
 				$iframe.wrap("<div class='class-video'>");
 				//$("#video-view").css({'background-color':'#FF69B4'});
+				//
 				$("#video-view").slideToggle('slow',hide);
 			});
 		});
