expanded section fit mobile height

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				//$.scrollify.enable();
 				$.scrollify.update();
 				//$("html, body").animate({scrollTop: $("#video-view").offset().top},800);
-				$("html, body").animate({ scrollTop: $("#video-view").offset().top-$("iframe").height()}, 800);
+				$("html, body").animate({ scrollTop: $("#contact").offset().top-$(window).height()}, 800);
 			}else{
 				$("html, body").animate({scrollTop: $("#about").offset().top},800);
 				$('#video-view').css('display','none');
