--- a/index.html
+++ b/index.html
@@ -4,76 +4,16 @@
       <title>Jason Lam's page</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <link rel="shortcut icon" type="image/png" href="icon.png" />
+	  <link rel="shortcut icon" type="image/png" href="img/icon.png" />
       <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css" rel="stylesheet" />
-      <link href="style.css" rel="stylesheet" />
+      <link href="css/style.css" rel="stylesheet" />
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet" />
       <link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet" />
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	  <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet" />
       <!--<script src="script.js"></script>-->
-	  <script src="jquery.scrollify.js"></script>
-	  <script>
-	  function hide(bool) {
-		if($.scrollify.isDisabled()){
-			$.scrollify.enable();	
-		}
-		$.scrollify.update();
-		if(bool!=='ab'&&bool!==undefined){
-			$('#about').css('height','100vh');
-		}
-		if(bool==undefined){
-			if ($("#video-view").is(':visible')) {
-				//var el = document.getElementById("about");
-				//var height = el.offsetHeight;
-				//$('#video-view').height("+=20");
-				//$("#video-view").css({'height':'+=20px'});
-				var newHeight = $(window).height() + $('#video-view').outerHeight() + $('.pad').outerHeight();
-				//el.style.height = newHeight + 'px';
-				$('#about').css('height',newHeight + 'px');
-				//$.scrollify.disable();
-				//$.scrollify.enable();
-				$.scrollify.update();
-				if((/Android|webOS|BlackBerry|iPhone|iPad|iPod|Opera Mini|IEMobile/i.test(navigator.userAgent) )) {
-					$.scrollify.disable();
-				}
-				//$("html, body").animate({scrollTop: $("#video-view").offset().top},800);
-				$("html, body").animate({ scrollTop: $("#contact").offset().top-$(window).height()}, 800);
-			}else{
-				$("html, body").animate({scrollTop: $("#about").offset().top},800);
-				$('#video-view').css('display','none');
-				$('#video-view h2').remove(); 
-				$('#video-view div').remove();
-				$('#about').css('height','100vh');
-				$.scrollify.update();
-				//$('#video-view').css('padding-top',$(".navbar-right").height()+10);	
-				if($.scrollify.isDisabled()){
-					$.scrollify.enable();	
-				}
-			}
-		}else{
-			if(bool=='ho'||bool=='co'){
-				//$('#video-view').css('padding-top',$(".navbar-right").height()+10);	
-				$('#video-view').css('display','none');
-				$('#video-view h2').remove(); 
-				$('#video-view div').remove();
-				//$.scrollify.update();
-				//document.getElementById("about").style.height = $(window).height() + 'px';
-				if($.scrollify.isDisabled()){
-					$.scrollify.enable();	
-				}
-				if(bool=='ho'){
-					$.scrollify.move("#home");
-				}else{
-					$.scrollify.move("#contact");
-				}
-			}else if(bool=='ab'){
-				$.scrollify.move("#about");
-			}
-		}
-		return false;
-	  }
-	  </script>
+	  <script src="js/jquery.scrollify.js"></script>
+	  <script src="js/vid.js"></script>
 	  <script>
 	  //if(!(/Android|webOS|BlackBerry|iPhone|iPad|iPod|Opera Mini|IEMobile/i.test(navigator.userAgent) )) {
 		$(function() {
@@ -84,52 +24,26 @@
 	  //}
 	  </script>
 	  <script>
-		$(document).ready(function() {
-		  $("#video-view").css('padding-top',$(".navbar-right").height()+10);
-		  if((/Android|webOS|BlackBerry|iPhone|iPad|iPod|Opera Mini|IEMobile/i.test(navigator.userAgent) )) {
-			//alert('computer');
-			$('section:nth-child(even)').css('background-attachment','scroll');
-		  };
-		  //$("body").attr('data-offset',$("section").height()/0.7);
-		  //$("section").attr('data-offset',$("section").height()/0.7);
-		  var today = new Date();
-		  var date = new Date(1994,5,14,9,0,0);
-		  var age = ((today - date)/(1000*60*60*24*365));
-		  $("#results").html(Math.floor(age.toFixed(1)).toString());
-			$(".bod").click(function(){
-				$(".bod").fadeOut();
-				$(".bod").fadeIn();
-			});
-			var bg = 1;
-			$("section:nth-child(even)").click(function(){
-				if(bg==1){
-					$(this).css("background-image", "url()");
-					bg = 0;
-				} else {
-					$(this).css("background-image", "url(giraffe.svg)");
-					bg = 1;
-				}
-			});
-			$(".popup").click(function () {
-				//document.getElementById('about').style.height = $('#video-view').offset()+300+$(window).height();
-				$("#video-view").css({"width":"600","max-width":"100vw","max-height":"70vh","margin":"0 auto"});
-				var $this = $(this);
-				var $iframe = $("<iframe>").attr("src", $this.data("link")).css({"width":"100%","height": "40vh"});
-				var $title = $("<h2>").text($this.data("title")).attr("class","pad");
-				//var $button = $("<button>").text("hide").attr("onclick","hide()");
-				$("#video-view").html($title).append($iframe);
-				$iframe.wrap("<div class='class-video'>");
-				//$("#video-view").css({'background-color':'#FF69B4'});
-				//
-				$("#video-view").slideToggle('slow',hide);
-			});
+		$(document).ready(function(){$(function() {
+		  $('.bod').addClass('animated slideInLeft');
+		  $('section').on('click', function(){ 
+            if($('.navbar-toggler').attr('aria-expanded')=='true'){
+              $('.navbar-toggler').trigger( "click" );
+            }
+          });
+		  /*if($('.navbar-toggler').attr('aria-expanded')=='true'){
+			$(".navbar-nav li a").css({'padding':'0px 0px' });
+		  } else {
+			$(".navbar-nav li a").css({'padding':'14px 16px'});
+		  }*/
+        });
 		});
 	  </script>
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
 	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
    </head>
    <body data-spy="scroll" data-target=".navbar-right">
-      <div class="navbar-right navbar-dark navbar-expand bg-dark fixed-top nav1">
+      <div class="navbar-right navbar-dark navbar-expand-sm bg-dark fixed-top nav1">
          <a><img class="bod" src="https://graph.facebook.com/1618956224/picture?type=square"></a>
 		 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar1">
 			<span class="navbar-toggler-icon"></span>
@@ -166,22 +80,22 @@
                   </div>
                </div>
 			   <div class="grid-container">
-				  <div class="grid-item caption"><img class="caption__media" src="checker.png"></img>
+				  <div class="grid-item caption"><img class="caption__media" src="img/checker.png"></img>
 					<div class="caption__overlay">
 						<h3 class="caption__overlay__title">Bets checker</h3>
 						<p class="caption__overlay__content">Gathering odds data from different bookies which guarantees you a profit. <a target="_blank" href="https://drive.google.com/open?id=1dwU-Um6cbANiWlm2IUbm_410xhu041DR">Link</a></p>
 					</div>
 				  </div>
-				  <div class="grid-item caption"><img class="caption__media" src="othello.png"></img>
+				  <div class="grid-item caption"><img class="caption__media" src="img/othello.png"></img>
 					<div class="caption__overlay">
 						<h3 class="caption__overlay__title">Boardgame</h3>
 						<p class="caption__overlay__content">
-						<a class="popup" data-link="LamAllFeatures.mp4" data-title="3-in-1 board game (Othello, Connect4, TicTacToe2)" href="#" onClick="return false;">Demo</a> |
+						<a class="popup" data-link="vid/LamAllFeatures.mp4" data-title="3-in-1 board game (Othello, Connect4, TicTacToe2)" href="#" onClick="return false;">Demo</a> |
 						<a target="_blank" href="https://drive.google.com/file/d/0B93u1Q8ZWEwdV2VhTGRhRFQ2U3M/view">Link</a>
 						</p>
 					</div>
 				  </div>
-				  <div class="grid-item caption"><img class="caption__media" src="memo.jpeg"></img>
+				  <div class="grid-item caption"><img class="caption__media" src="img/memo.jpeg"></img>
 				    <div class="caption__overlay">
 						<h3 class="caption__overlay__title">Memo App for android</h3>
 						<p class="caption__overlay__content">It allows users to add memos and schedule notifications. <a target="_blank" href="				  https://drive.google.com/file/d/0B93u1Q8ZWEwdaS1kUFNUWVJ2OFU/view
