--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
    </head>
    <body data-spy="scroll" data-target=".navbar-right">
-      <div class="navbar-right navbar-dark navbar-expand-sm bg-dark fixed-top nav1">
+      <div class="navbar-right navbar-dark navbar-expand-sm fixed-top nav1">
          <a><img class="bod" src="https://graph.facebook.com/1618956224/picture?type=square"></a>
 		 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar1">
 			<span class="navbar-toggler-icon"></span>
