--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 	  </script>
 	  <script>
 		$(document).ready(function(){$(function() {
-		  //$('.bod').addClass('animated slideInLeft');
 		  $('section').on('click', function(){ 
             if($('.navbar-toggler').attr('aria-expanded')=='true'){
               $('.navbar-toggler').trigger( "click" );
@@ -50,6 +49,15 @@
 	  </script>
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
 	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+	  <!-- Global site tag (gtag.js) - Google Analytics -->
+	  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114528684-1"></script>
+	  <script>
+	    window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'UA-114528684-1');
+	  </script>
+
    </head>
    <body data-spy="scroll" data-target=".navbar-right">
       <div class="navbar-right navbar-dark navbar-expand-sm fixed-top nav1">
